--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "windowsDebug": "@powershell -Command $env:DEBUG='*';node ./src/assert.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "html-webpack-plugin": "^5.2.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.2",
